--- a/MTYD/ViewModel/VerifyInfo.xaml
+++ b/MTYD/ViewModel/VerifyInfo.xaml
@@ -2,112 +2,136 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="MTYD.ViewModel.VerifyInfo">
 
     <ScrollView>
-    <StackLayout x:Name="StackL" BackgroundColor="White">
+        <StackLayout x:Name="StackL" BackgroundColor="White">
 
             <AbsoluteLayout>
 
                 <BoxView x:Name="orangeBox" BackgroundColor="#FF9E19" 
-                       Margin="0, -100, 0, 0"
-                       AbsoluteLayout.LayoutBounds="0.5, 0, 1, 70"
-                       AbsoluteLayout.LayoutFlags="PositionProportional,WidthProportional"/>
+                        Margin="0, -100, 0, 0"
+                        AbsoluteLayout.LayoutBounds="0.5, 0, 1, 70"
+                        AbsoluteLayout.LayoutFlags="PositionProportional,WidthProportional"/>
 
                 <Label Text="VERIFY INFO" FontSize="25" FontAttributes="Bold"
-                       AbsoluteLayout.LayoutBounds="0.5, 0.23"
-                       AbsoluteLayout.LayoutFlags="PositionProportional"/>
+                        AbsoluteLayout.LayoutBounds="0.5, 0.23"
+                        AbsoluteLayout.LayoutFlags="PositionProportional"/>
 
                 <ImageButton x:Name="pfp" BackgroundColor="LightGray" HeightRequest="40" WidthRequest="40"
-                             AbsoluteLayout.LayoutBounds="0.93, 0.15" Clicked="clickedPfp"
-                             AbsoluteLayout.LayoutFlags="PositionProportional"/>
+                                AbsoluteLayout.LayoutBounds="0.93, 0.15" Clicked="clickedPfp"
+                                AbsoluteLayout.LayoutFlags="PositionProportional"/>
 
                 <ImageButton x:Name="menu" Source="menu.png" HeightRequest="40" WidthRequest="40"
-                             AbsoluteLayout.LayoutBounds="0.07, 0.15" Scale="0.8"
-                             AbsoluteLayout.LayoutFlags="PositionProportional" Clicked="clickedMenu"/>
+                                AbsoluteLayout.LayoutBounds="0.07, 0.15" Scale="0.8"
+                                AbsoluteLayout.LayoutFlags="PositionProportional" Clicked="clickedMenu"/>
             </AbsoluteLayout>
 
             <Label x:Name="spacer" HeightRequest="5"/>
 
-        <Label Text="PAYMENT METHOD" HorizontalOptions="Start" FontSize="22"
+            <Label Text="DELIVERY ADDRESS" HorizontalOptions="Start" FontSize="22"
                        Margin="25,0,0,0" FontAttributes="Bold"/>
 
-        <Label x:Name="spacer1" HeightRequest="5"/>
+            <Label x:Name="spacer3" HeightRequest="5"/>
 
-        <Grid x:Name="cards" HorizontalOptions="Center" VerticalOptions="Center"
-              Margin="25,0">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="18*"/>
-                        <ColumnDefinition Width="18*"/>
-                        <ColumnDefinition Width="18*"/>
-                        <ColumnDefinition Width="13*"/>
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="60*"/>
-                    </Grid.RowDefinitions>
-                    
-            <Frame HeightRequest="40" BackgroundColor="Transparent" HasShadow="False" Grid.Column="0"
-                   Grid.Row="0" Padding="0,10" Margin="4,4" Scale="1.5">
+            <Label x:Name="name" Text="First Name Last Name" HorizontalOptions="Start" FontSize="20"
+                           Margin="25,0,0,0" FontAttributes="Bold"/>
 
-                <Image Source="card.png" Aspect="AspectFit"/>
-
-            </Frame>
-
-         </Grid>
+            <Label x:Name="apt" HorizontalOptions="Start" FontSize="17" Margin="25,0,0,0" TextColor="#585858"/>
+            <Label x:Name="street" Margin="25,0,0,0" HorizontalOptions="Start" FontSize="17" TextColor="#585858"/>
+            <Label x:Name="cityStateZip" Margin="25,0,0,0" HorizontalOptions="Start" FontSize="17" TextColor="#585858"/>
 
 
-        <Grid x:Name="numbers" HorizontalOptions="Center" VerticalOptions="Center"
-              Margin="25,0">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="18*"/>
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="15*"/>
-                    </Grid.RowDefinitions>
-                    
-                <Label x:Name="cardNum" Text="**************##" FontAttributes="Bold" HorizontalTextAlignment="Start"/>
-
-         </Grid>
-
-
-         <Label x:Name="spacer2" HeightRequest="15"/>
-
-        <Label Text="DELIVERY ADDRESS" HorizontalOptions="Start" FontSize="22"
-                       Margin="25,0,0,0" FontAttributes="Bold"/>
-
-        <Label x:Name="spacer3" HeightRequest="5"/>
-
-        <Label x:Name="name" Text="First Name Last Name" HorizontalOptions="Start" FontSize="20"
-                       Margin="25,0,0,0" FontAttributes="Bold"/>
-
-        <Label x:Name="apt" HorizontalOptions="Start" FontSize="17" Margin="25,0,0,0" TextColor="#585858"/>
-        <Label x:Name="street" Margin="25,0,0,0" HorizontalOptions="Start" FontSize="17" TextColor="#585858"/>
-        <Label x:Name="cityStateZip" Margin="25,0,0,0" HorizontalOptions="Start" FontSize="17" TextColor="#585858"/>
-
-
-        <Label x:Name="spacer4" HeightRequest="15"/>
+            <Label x:Name="spacer4" HeightRequest="15"/>
 
             <!--<Button x:Name= "checkoutButton" BackgroundColor="#FF9E19" Margin="20,0,0,0" HorizontalOptions="Start"
                         Text="CHECKOUT" TextColor="White"  FontAttributes="Bold" FontSize="20"
                         WidthRequest="180" HeightRequest="50" />-->
 
-        <Grid HorizontalOptions="Center" VerticalOptions="Center">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="40*"/>
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="16*"/>
-                        <ColumnDefinition Width="16*"/>
-                    </Grid.ColumnDefinitions>
+            <Label x:Name="spacer2" HeightRequest="15"/>
 
-                    <Button x:Name= "checkoutButton" BackgroundColor="#FF9E19" Margin="0,10,70,10"
-                        Text="CHECKOUT" TextColor="White"  FontAttributes="Bold" FontSize="20"
-                        WidthRequest="180" HeightRequest="50" Grid.Column="1" Grid.Row="0" Clicked="checkoutButton_Clicked"/>
+            <Label Text="PAYMENT METHOD" HorizontalOptions="Start" FontSize="22"
+                       Margin="25,0,0,0" FontAttributes="Bold"/>
 
-                    <Button x:Name="backButton" Text="◀  BACK" FontSize="20" FontAttributes="Bold"
-                BackgroundColor="#F59A28" TextColor= "White"
-                HeightRequest="50" WidthRequest="120" CornerRadius="25" Margin="20,10,50,10"
-                Clicked="clickedBack" Grid.Column="0" Grid.Row="0"/>
+            <Label x:Name="spacer1" HeightRequest="5"/>
 
+
+            <!--<Grid x:Name="cards" HorizontalOptions="Center" VerticalOptions="Center"
+                  Margin="25,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="18*"/>
+                            <ColumnDefinition Width="18*"/>
+                            <ColumnDefinition Width="18*"/>
+                            <ColumnDefinition Width="13*"/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="60*"/>
+                        </Grid.RowDefinitions>
+                    
+                <Frame HeightRequest="40" BackgroundColor="Transparent" HasShadow="False" Grid.Column="0"
+                       Grid.Row="0" Padding="0,10" Margin="4,4" Scale="1.5">
+
+                    <Image Source="card.png" Aspect="AspectFit"/>
+
+                </Frame>
+
+             </Grid>
+
+
+            <Grid x:Name="numbers" HorizontalOptions="Center" VerticalOptions="Center"
+                  Margin="25,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="18*"/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="15*"/>
+                        </Grid.RowDefinitions>
+                    
+                    <Label x:Name="cardNum" Text="**************##" FontAttributes="Bold" HorizontalTextAlignment="Start"/>
+
+             </Grid>-->
+
+            <Grid >
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="100"></RowDefinition>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"></ColumnDefinition>
+                    <ColumnDefinition Width="*"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+
+                <Grid Grid.Row="0" Grid.Column="0">
+                     <StackLayout>
+                        <Button Text="PayPal" TextColor="Orange" FontSize="50" ></Button>
+                        <Label HorizontalTextAlignment="Center" Text="Checkout with PayPal" FontSize="Small" FontAttributes="Bold"></Label>
+                    </StackLayout>
                 </Grid>
+                <Grid Grid.Row="0" Grid.Column="1">
+                    <StackLayout>
+                        <Button Text="Stripe" TextColor="Orange" FontSize="50" ></Button>
+                        <Label HorizontalTextAlignment="Center" Text="Checkout with Stripe" FontSize="Small" FontAttributes="Bold"></Label>
+                    </StackLayout>
+                </Grid>
+                
+            </Grid>
 
+            <Grid HorizontalOptions="Center" VerticalOptions="Center">
+
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="16*"/>
+                </Grid.RowDefinitions>
+
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="16*"/>
+                    <ColumnDefinition Width="16*"/>
+                </Grid.ColumnDefinitions>
+
+                <Button x:Name="backButton" Text="◀  BACK" FontSize="20" FontAttributes="Bold"
+                    BackgroundColor="#F59A28" TextColor= "White"
+                    HeightRequest="50" WidthRequest="120" CornerRadius="25" Margin="40,10,40,10"
+                    Clicked="clickedBack" Grid.Column="0" Grid.Row="0" HorizontalOptions="Center"/>
+
+                <Button x:Name= "checkoutButton" BackgroundColor="#FF9E19" HorizontalOptions="End" Margin="0,10,20,10"
+                    Text="CHECKOUT" TextColor="White"  FontAttributes="Bold" FontSize="20"
+                    WidthRequest="150" HeightRequest="50" Grid.Column="1" Grid.Row="0" Clicked="checkoutButton_Clicked"/>
+            </Grid>
         </StackLayout>
     </ScrollView>
 </ContentPage>
